2002-08-29  Yoann Vandoorselaere  <yoann@mandrakesoft.com>

	* configure.in: bump version number to 0.8.1.

	* NEWS: update release notes.

	* src/file-server.c (file_server_monitor_file): 
	added a log() telling the file doesn't exist and that
	we'll try to re-open it periodically.

2002-08-24  Guillaume Pelat  <endymion@linux-secure.com>

	* src/log-common.c (log_container_new):
	* src/pconfig.c (set_pidfile):
	(set_udp_server_addr):
	checking strdup return value.

	* src/udp-server.c (udp_server_new):
	fixing memory leak

2002-08-21  Guillaume Pelat  <endymion@linux-secure.com>

	* src/file-server.c (check_modification_time):
	fixed assert problem when two modifications are
	done in the log file at the same second.

2002-08-21  Guillaume Pelat  <endymion@linux-secure.com>

	* src/file-server.c (logfile_alert): 
	* src/regex.c(regex_init):
	replace strncpy by snprintf.

2002-08-21  Guillaume Pelat  <endymion@linux-secure.com>

	* src/file-server.c (logfile_alert): fix unterminated
	string.
	
	* plugins/simple/simple.c (parse_include): fix unterminated
	string. Close the open file.

	* src/regex.c: coding style fixes
	(regex_init): fix unterminated strings.
	
2002-08-20  Yoann Vandoorselaere  <yoann@mandrakesoft.com>

	* src/log-common.c (format_syslog_header): 
	return -1 if buf is NULL.
	
	(log_container_new): some of the argument might be NULL.
	(log_container_delete): ditto.

	* configure.in: require autoconf >= 2.53.

2002-08-16  Yoann Vandoorselaere  <yoann@mandrakesoft.com>

	* src/file-server.c (file_server_wake_up): cleanup.
	(logfile_alert): new function.
	(process_logfile): new function.

	(is_file_already_used): check the logfile hard link count, emit an
	alert if we reach 0.
	
	(check_modification_time): emit an alert if modification time got
	modified, but file size didn't increase.

	* src/lml-alert.c (lml_emit_alert): 
	there might be no log entry.

	* plugins/simple/simple.c (emit_alert): 
	coding style fix.
