@@ -1,12 +1,17 @@
-#define _XOPEN_SOURCE 600
-
 #include <stdio.h>
 #include <string.h>
 #include <ctype.h>
 #include <stdlib.h>
 #include <string.h>
 #include <sys/time.h>
-#include <time.h>
+
+/*
+ * glibc2 won't define strptime()
+ * unless _XOPEN_SOURCE is defined.
+ */
+#define _XOPEN_SOURCE 600
+ #include <time.h>
+#undef _XOPEN_SOURCE
 
 #include <libprelude/prelude-log.h>
 #include "log-common.h"
