@@ -1,3 +1,12 @@
+2002-09-13  Yoann Vandoorselaere  <yoann@mandrakesoft.com>
+
+	* src/log-common.c: fix a solaris compilation problem
+	where the timeval structure wouldn't be defined if
+	_XOPEN_SOURCE is defined. 
+
+	Only define _XOPEN_SOURCE for <time.h> inclusion,
+	and #undef it after.
+
 2002-08-29  Yoann Vandoorselaere  <yoann@mandrakesoft.com>
 
 	* configure.in: bump version number to 0.8.1.
